# envguard

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: getting-started.md
src/envguard/: __init__.py  auditor.py  checker.py  cli.py  generator.py  reporter.py
src/envguard.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_auditor.py  test_checker.py
