[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envguard"
version = "0.1.0"
description = "Validate, audit, and generate .env files — never ship broken configs again"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["dotenv", "environment", "configuration", "security", "cli", "devtools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
    "pre-commit>=3.5",
]

[project.scripts]
envguard = "envguard.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/envguard"
Documentation = "https://github.com/your-username/envguard/blob/main/docs/getting-started.md"
"Bug Tracker" = "https://github.com/your-username/envguard/issues"
Changelog = "https://github.com/your-username/envguard/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

# --- Ruff linter ---
[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM"]
ignore = ["E501"]

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=envguard --cov-report=term-missing"

# --- Mypy ---
[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

# --- Coverage ---
[tool.coverage.run]
source = ["src/envguard"]